--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
             "src": "/(.*)",
             "dest": "main.py"
         }
-    ]
+    ],
+    "functions": {
+        "app/api/**/*": {
+            "maxDuration": 60
+        }
+    }
 }
