--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
         }
     ],
     "functions": {
-        "main.py": {
+        "api/**/*.py": {
             "maxDuration": 60
         }
     }
