--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
-    "buildCommand": "api/main.py",
+    "builds": [
+        {
+            "src": "main.py",
+            "use": "@vercel/python"
+        }
+    ],
     "rewrites": [
         {
             "source": "/(.*)",
