--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         }
     ],
     "functions": {
-        "main.py": {
+        "api/main.py": {
             "maxDuration": 60
         }
     }
