--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "main.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxDuration": 60
-            }
-        }
-    ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "main.py"
         }
-    ]
+    ],
+    "functions": {
+        "main.py": {
+            "maxDuration": 60
+        }
+    }
 }
